<resources>
    <string name="app_name">Diabtic App</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <string name="user_name">Julia Mario</string>
    <string name="user_email">juliamario@gmail.com</string>
    <string name="account">Account</string>
    <string name="diabets_calculator">Diabets Calculator</string>
    <string name="hi_user">👋 Hi %1$s!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_diabets_negative">\"Stay healthy, stay safe\"</string>
    <string name="status_diabets_positive">\"Stay active, stay positive\"</string>
    <string name="desc_diabetes_detected">Jaga pola makan seimbang, rutin berolahraga, dan pantau kadar gula darah secara berkala untuk mengelola diabetes dengan baik.</string>
    <string name="title_diabetes_detected">Wah.. Kamu Terdeteksi Diabetes!</string>
    <string name="next">Next</string>
    <string name="desc_no_diabetes_detected">Lakukan olahraga teratur, konsumsi makanan sehat, dan pastikan tidur yang cukup untuk menjaga kesehatan tubuh.</string>
    <string name="title_no_diabetes_detected">Selamat Kamu Tidak Terdeteksi Diabetes</string>
    <string name="simpan">Simpan</string>
    <string name="no_telp">No.Telp</string>
    <string name="Ubah_notelp">Ubah Nomor Telepon</string>
    <string name="Ubah_nama">Ubah Nama</string>
    <string name="Ubah_pw">Ubah Password</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="profile">Profile</string>
    <string name="tagline_title">Deteksi dengan\nDiabtic</string>
    <string name="tagline_subtitle">Karena manisnya gula tak sebanding\ndengan manisnya hidup sehat</string>

    <string name="title_menu_1">Calculate Your Diabetes Risk</string>
    <string name="desc_menu_1">Get accurate risk predictions using machine learning model.\n Stay informed about your health.</string>

    <string name="title_menu_2">Track Your Medical History</string>
    <string name="desc_menu_2">Keep all your medical records in one place\n for easy access and management.</string>

    <string name="title_menu_3">Stay Updated with Health News</string>
    <string name="desc_menu_3">Discover the latest health news\n and tips tailored to your needs.</string>
    <string name="selanjutnya">Next</string>
    <string name="skip_tour">Skip</string>

    <string name="oops_no_medical_history">Oops.. Masukin Data kamu dulu yah buat di prediksi</string>
    <string name="add_medical_history_hint">Sebelum melihat History data pengecekan. kamu bisa menggunakan fitur prediksi terlebih dahulu.</string>
    <string name="add_medical_history">Add Medical History</string>
    <string name="empty_state_image_description">Illustration for empty medical history</string>
</resources>