<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageDiabetesDetected"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/diabetes_detected"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleDiabetesDetected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleDiabetesDetected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_diabetes_detected"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/title_blue"
        app:layout_constraintTop_toBottomOf="@id/imageDiabetesDetected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/descDiabetesDetected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_diabetes_detected"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/titleDiabetesDetected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <!-- Sementara pake button dlu -->
    <Button
        android:id="@+id/btnNextDiabetesDetected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/purple_700"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/descDiabetesDetected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
