<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <!-- ubah image nya bang. di figma gw gak bisa download resource image nya. Sementara ini dlu -->
    <ImageView
        android:id="@+id/imageNoDiabetes"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/no_diabet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleNoDiabetes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleNoDiabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_no_diabetes_detected"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/title_blue"
        app:layout_constraintTop_toBottomOf="@id/imageNoDiabetes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/descNoDiabetes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/desc_no_diabetes_detected"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        app:layout_constraintTop_toBottomOf="@id/titleNoDiabetes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp" />

    <!-- Sementara pake button dlu -->
    <Button
        android:id="@+id/btnNextNoDiabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/purple_700"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/descNoDiabetes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
